@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	6.99 (gritter) 7/12/06";
+	"@(#)/usr/ucb/otfdump.sl	7.1 (gritter) 7/13/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  6.99 (gritter) 7/12/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 6.99 (gritter) 7/12/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.1 (gritter) 7/13/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.1 (gritter) 7/13/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.99 (gritter) 7/12/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.1 (gritter) 7/13/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.99 (gritter) 7/12/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.1 (gritter) 7/13/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "6.99";
+const char revision[] = "7.1";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.53 (gritter) 7/11/06
@@ -26,7 +26,7 @@ n2.c: * Sccsid @(#)n2.c	1.22 (gritter) 7/3/06
 n3.c: * Sccsid @(#)n3.c	1.102 (gritter) 7/11/06
 n4.c: * Sccsid @(#)n4.c	1.33 (gritter) 7/11/06
 n5.c: * Sccsid @(#)n5.c	1.52 (gritter) 7/9/06
-n7.c: * Sccsid @(#)n7.c	1.71 (gritter) 7/11/06
+n7.c: * Sccsid @(#)n7.c	1.72 (gritter) 7/13/06
 n8.c: * Sccsid @(#)n8.c	1.28 (gritter) 7/4/06
 n9.c: * Sccsid @(#)n9.c	1.46 (gritter) 7/3/06
 ni.c: * Sccsid @(#)ni.c	1.30 (gritter) 7/11/06
